# entaldocs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
boilerplate/source/: conf.py  index.rst
boilerplate/source/_templates/autoapi/: index.rst
demo/: __init__.py
demo/enthalpy/: __init__.py  entalpist.py
docs/source/: about.rst  conf.py  index.rst
docs/source/_static/css/: entalpic.css
docs/source/guide/: conventions.rst  example.rst  github.rst  index.rst  ruff.rst  write-docstrings.rst  write-documentation.rst
entaldocs/: __init__.py  cli.py  dependencies.json  logger.py  utils.py
entaldocs/__defaults/source/: conf.py
source/: conf.py  index.rst
source/_templates/autoapi/: index.rst
source/contributors/: example.rst  github.rst  index.rst  write-documentation.rst
source/guide/: conventions.rst  example.rst  github.rst  index.rst  write-docstrings.rst
src/entaldocs/: __init__.py  cli.py  dependencies.json  logger.py  utils.py
src/siesta/: __init__.py  cli.py  dependencies.json  logger.py  precommits.yaml  utils.py
src/siesta/utils/: __init__.py  all.py  common.py  docs.py  github.py  project.py  tree.py
tests/: conftest.py  test_copyrights.py
tests/cli/: test_build_docs.py  test_init_docs.py  test_quickstart_project.py  test_show_deps.py  test_watch_docs.py
tests/test_cli/: test_build_docs.py  test_init_docs.py  test_open_docs.py  test_quickstart_project.py  test_show_deps.py  test_watch_docs.py
tests/test_utils/: test_project_utils.py  test_tree_utils.py
(+8 files in other folders)
