[project]
name = "dev-guidelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "furo>=2024.8.6",
    "sphinx-autoapi>=3.3.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "sphinx-code-include>=1.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-math-dollar>=1.2.1",
]

[tool.uv]
dev-dependencies = ["ipython>=8.28.0"]
[tool.ruff.format]
docstring-code-format = true
