[project]
name = "dev-guidelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.4",
    "cyclopts>=2.9.9",
    "pygithub>=2.5.0",
    "keyring>=25.5.0",
    "ruamel-yaml>=0.18.6",
]

[project.scripts]
entaldocs = "entaldocs.cli:app"

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "pre-commit>=4.0.1",
    "shibuya>=2024.10.15",
    "sphinx-autoapi>=3.3.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "sphinx-code-include>=1.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-math-dollar>=1.2.1",
    "sphinxawesome-theme>=5.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entaldocs"]

[tool.ruff.format]
docstring-code-format = true
